--- a/article/sg0/doc/0047.md
+++ b/article/sg0/doc/0047.md
@@ -134,7 +134,7 @@
 “……”  
 “前辈……？”  
 “……嗯。我能依靠的只有你了。”  
-“感谢前辈的信任！。  
+“感谢前辈的信任！  
  顺便说，刚才的对话内容也同样受到了监听。”  
 “诶！？怎么会这样！那，如果你协助我这件事暴露的的话……”  
 “后果有三种：  
