--- a/article/sg0/doc/0113.md
+++ b/article/sg0/doc/0113.md
@@ -23,23 +23,23 @@
 “是啊……那就麦茶吧。”  
 “嗯\~知道了。”  
 真由理走向厨房。  
-“啊，杯子都用过了……我现在就洗，你稍微等等哦\~。”  
+“啊，杯子都用过了……我现在就洗，你稍微等等哦\~”  
 “没事，不用急。。”  
 “啊，真由喜真由喜，麻烦也给我倒一杯。”  
-“好\~。”  
+“好\~”  
 总觉得，是很令人怀念的氛围。感觉已经好久没有，和某人进行这样平常的对话了。但是现在不是沉溺于感慨的时候，趁着真由理洗杯子的空当，整理一下现在的情况吧。  
 
 “世界线……发生变动了吧？”  
 那个时候，我却在最后关头犹豫了。如果篝——或者说是红莉栖——没有挡住我的手指的话，也许世界线就不会改变，全员就那样被 STRATFO 抓住了。不过不管怎么说，世界线变动了。*Reading·Steiner* 发动的感觉，已经清晰地铭刻在身体里，所以肯定不是错觉。从真由理和桶子一如既往的行为也可以看出，面临的危机已经远去。世界线变动的原因，恐怕是篝脑中的红莉栖记忆的删除。红莉栖的记忆里应该包含了时间机器理论相关的内容。所以**那份内容的留存与否，可能具有左右世界线变动的重大意义**。因为我把它消去了——不，也有可能恰恰相反，因为真帆开发的程序有瑕疵，使得记忆的覆盖失败，这种情况，也可能使世界线变动吧。和夏天那时候不同，这次世界线变动的条件还不清楚。首先应该先确认，篝的记忆覆盖是否成功。  
 
-“久等了\~。”  
+“久等了\~”  
 刚刚决定好第一步的方针，真由理正好端着盛了杯子的托盘过来了。  
-“现在要上麦茶咯\~。”  
+“现在要上麦茶咯\~”  
 真由理把盘子放在桌上，朝冰箱走去。眼睛一撇，发现托盘上放着 4 个刚刚洗好的杯子。  
-“……真由理，为什么杯子有 4 个？。”  
+“……真由理，为什么杯子有 4 个？”  
 “诶？因为，篝小姐也要喝呀。”  
 对了，篝……！  
-“篝要来吗？。”  
+“篝要来吗？”  
 “刚刚她在 RINE 上说，很快就到了。”  
 “……这、这样啊。是来这里做什么？”  
 “明明是冈伦叫来的啊？昨天你在 RINE 上联系，让大家今天中午在这里集合。  
@@ -52,16 +52,16 @@
 “篝小姐的记忆能早点恢复就好了呢\~  
  除了最近的事情什么都不记得了，好孤单呢。”  
 除了最近的事情什么都不记得了……！？怎么回事？现在的篝，和第一次遇到的不一样，应该还遗留有小时候在未来的记忆才对。难道说，记忆覆盖的结果，反而将残留的记忆给消去了吗？  
-“来，冈伦，请用茶\~。”  
+“来，冈伦，请用茶\~”  
 真由理倒了一杯麦茶递了过来。  
 “……嗯，谢谢。”  
 我拼命隐藏内心的动摇，接过杯子。  
 “桶子君的就放在这里啦\~”  
-“谢啦\~。”  
+“谢啦\~”  
 
 我把麦茶一口气喝光，从沙发上站起来走到桶子那里。  
 “桶子。”  
-“嗯？怎么了？。”  
+“嗯？怎么了？”  
 为了不让真由理听到，我压低声音问道。  
 “篝的记忆覆盖成功了吗？还是失败了？”  
 桶子用呆呆的表情看了我一会儿。  
@@ -70,23 +70,23 @@
 预料之外的回答。  
 “我在问，篝脑中残留的红莉栖的记忆，成功消除了没有？”  
 “这是什么可怕的 SF 设定啊。冈伦你终于又变回中二病患者了吗？”  
-“什……！。”  
+“什……！”  
 我不禁愣在原地。桶子看起来不像在说谎，也没理由说谎。也就是说，在这条世界线，篝的大脑里本来就没有被植入红莉栖的记忆吗？  
-“过、过来一下！。”  
-“啊\~我正在玩黄游啊\~。”  
+“过、过来一下！”  
+“啊\~我正在玩黄游啊\~”  
 “够了！”  
 我拉桶子来到楼下，把搞不清状况的真由理留在房间里。  
 “哇\~好冷啊。冈伦你想杀了我吗……”  
 “别扯皮了，稍微陪我一下，有些事想要确认。”  
 从我的态度中感觉事情非同小可，桶子表情稍微有些惊讶，然后默默点了点头。  
-“现在的篝，没有记忆吗？。”  
+“现在的篝，没有记忆吗？”  
 “是啊，这一点不是说了很多遍了吗？”  
 “包括乘时间机器来到这里之前，未来的记忆也没有了吗？”  
 “没有了，记得的只有最近的事情。  
  如果还记得未来的事情的话，至少会把篝碳的真实身份告诉真由喜。”  
 “啊……！也就是说，真由理还不知道篝就是自己的女儿吗？”  
 “嗯。是你决定要先保密的啊。”  
-“也就是说，知道篝是从未来来的这件事的是……。”  
+“也就是说，知道篝是从未来来的这件事的是……”  
 “我、冈伦还有铃羽。”  
 “只有这些？”  
 “只有这些，除非你还和其他什么人说了。”  
@@ -117,9 +117,9 @@
 “这是谁的歌？”  
 “诶？”  
 在我出声之后，真由理终于注意到了我们。  
-“啊，欢迎回来\~那么冷在外面聊什么呢\~？。”  
+“啊，欢迎回来\~那么冷在外面聊什么呢\~？”  
 “稍微对于这季的新番交换了一下意见。”  
-“诶\~好厉害呢\~。”  
+“诶\~好厉害呢\~”  
 “呐，刚刚的歌……”  
 “啊，难道，我刚刚哼出来了吗？”  
 *♪\~有个要寻找的东西\~♪*  
