--- a/article/sg0/doc/0007.md
+++ b/article/sg0/doc/0007.md
@@ -62,7 +62,7 @@
 “嗯？怎么了吗菲莉丝？头疼吗？”  
 菲莉丝：“该从哪里开始吐槽呢……不管怎么看，这都是社团为了拉新人而设计的陷阱啊喵……”  
 “别，别直接说出来啊……  
- 我好歹，虽然也有想过是不是有什么小九九——。  
+ 我好歹，虽然也有想过是不是有什么小九九——  
  但也装作不去想的样子啊。大家都是好人啊。”  
 琉华子：“那，社团的练习会很忙的吧……”  
 “啊，没……练习基本上是没怎么去的……”  
