--- a/article/sg0/doc/0000.md
+++ b/article/sg0/doc/0000.md
@@ -7,6 +7,10 @@
 > 1.129848  
 > [ 2010/07/28 ] 接动漫 *23β* 话，冈伦误杀红莉栖后。  
 
+| ←prev | [menu](../) | [next→](./0001) |
+
+---
+
 舱门开启了。  
 耀眼的光芒照射入我的眼睛。  
 这里是哪里？  
