修正代号标点

--- a/article/sg0/doc/0049.md
+++ b/article/sg0/doc/0049.md
@@ -18,23 +18,23 @@
   - 以报社编辑的身份采访过真帆
 - 比屋定真帆
   - 从冈伦出套出时间机器情报
-  - 被【教授】洗脑，泄露情报
+  - 被『教授』洗脑，泄露情报
   - 2011 年秋叶原大战后主动消失
 - 椎名篝
-  - 被【教授】洗脑，后为了妈妈摆脱控制
+  - 被『教授』洗脑，后为了妈妈摆脱控制
   - 2011 年秋叶原大战时救出冈伦而牺牲
 
 ### 同盟
 - 黑色骑手装女性
-  - 真实身份为篝，幼时被【教授】洗脑
+  - 真实身份为篝，幼时被『教授』洗脑
   - 因为真由理觉醒摆脱控制，闯入 STRATFO 基地救出冈伦后牺牲
 
 ### 敌对
 - 阿莱克西斯·雷斯吉宁 *Alexis·Leskinen*
-  - 【美】STRATFO，代号【教授】
+  - 【美】STRATFO，代号『教授』
   - 擅长洗脑技术，控制了篝和真帆
 - 朱蒂·莱耶丝 *Judy·Reyes*
-  - 疑似为【教授】的同盟
+  - 疑似为『教授』的同盟
 - 未知武装势力
   - 想要抢夺红莉栖的笔记本电脑和移动硬盘
 
@@ -46,7 +46,7 @@
   - 密码未解锁
   - 已被冈伦破坏
 - 『Amadeus』
-  - 会被【教授】监听
+  - 会被『教授』监听
   - 已被删除
 - FG V204 2nd EDITION ver2.31
   - 2011 秋叶原大战中疑似被破坏
@@ -60,7 +60,7 @@
 - 新型脑炎
   - 真实原因是 *Reading·Steiner*
   - 吹雪记得在其他世界线的经历
-  - 【教授】在收集新型脑炎患者
+  - 『教授』在收集新型脑炎患者
 
 ## STEINS;GATE 达成条件
 - ■■■■■■■■■■■■■
