--- a/article/sg0/doc/0119.md
+++ b/article/sg0/doc/0119.md
@@ -1,6 +1,6 @@
 # 相互再归的鹅妈妈 - 07
 > 1.064756  
-> [ 2005/06/30 篝视角 ] 大雨天，篝从【教授】处出逃，失落的她遇上了同样失落的少年，给他唱了《星之奏》。少年离开后她被【教授】找到，逃离时同样冲上了机动车道，差点被卡车撞到。  
+> [ 2005/06/30 篝视角 ] 大雨天，篝从『教授』处出逃，失落的她遇上了同样失落的少年，给他唱了《星之奏》。少年离开后她被『教授』找到，逃离时同样冲上了机动车道，差点被卡车撞到。  
 
 | [←prev](./0118) | [menu](../) | [next→](./0120) |
 
@@ -17,8 +17,8 @@
 ---  
 
 那到底是什么时候的事情呢？1998 年，和铃羽姐姐分开之后，一直被关在某个设施里。我从那里逃出来是什么时候的事情呢？促使我逃出的理由是……想快点和妈妈见面，仅此而已。  
-某一天在某个设施里，篝和平常一样等待着【教授】得到来，透过小小的窗户，注意到外面正在下雨。感受到窗外传来的水的气息，想起了妈妈的话。回过神来，篝已经脱掉了覆盖在头上的装置。因为谁都没预料到这个行动，所以篝很简单就逃了出来。她撕掉贴在两臂上的导线，从小小的窗户爬到了外面，然后躲进了正好从停车场出发的卡车的车斗里。  
-设施好像在深山里。摇晃了好几个小时后，卡车终于到达了某个小镇。趁着卡车停车的时机，篝冲到外面，一边淋雨，一边漫无目的地走着。她并没有想去的地方，虽然想和妈妈见面，但是不知道妈妈在哪里。就算见到了，这时候的妈妈也比篝还小几岁，而且根本就不知道篝的事。冲动地从设施里跑出来，连钱都没带，她什么都做不了，只能等着【教授】找过来。在那之前——想要好好淋一次雨。雨一直淅沥淅沥地下着，虽然衣服都湿了，但她完全不在意。  
+某一天在某个设施里，篝和平常一样等待着『教授』得到来，透过小小的窗户，注意到外面正在下雨。感受到窗外传来的水的气息，想起了妈妈的话。回过神来，篝已经脱掉了覆盖在头上的装置。因为谁都没预料到这个行动，所以篝很简单就逃了出来。她撕掉贴在两臂上的导线，从小小的窗户爬到了外面，然后躲进了正好从停车场出发的卡车的车斗里。  
+设施好像在深山里。摇晃了好几个小时后，卡车终于到达了某个小镇。趁着卡车停车的时机，篝冲到外面，一边淋雨，一边漫无目的地走着。她并没有想去的地方，虽然想和妈妈见面，但是不知道妈妈在哪里。就算见到了，这时候的妈妈也比篝还小几岁，而且根本就不知道篝的事。冲动地从设施里跑出来，连钱都没带，她什么都做不了，只能等着『教授』找过来。在那之前——想要好好淋一次雨。雨一直淅沥淅沥地下着，虽然衣服都湿了，但她完全不在意。  
 （……淋了不会痛的雨，真是奇怪的感觉。）  
 这个时代的雨，接触了皮肤也不会感到刺激，不如说，有些温暖。篝知道了，原来自然不是单纯要让人类感受到痛苦而存在的。篝想道，这个时代的雨是有生命的。这个时代的雨是“活雨”，和未来世界所下的“死雨”，完全不一样。篝享受着被活雨包裹着的感觉，继续走着。  
 ……究竟走了多远呢？脚终于走累了的时候，篝找到了一个有屋檐的长凳。这是一个有轨电车的月台，没有工作人员，也没有检票口。篝坐在椅子上，茫然地抬头看着天空。雨好像还没有要停的样子。  
@@ -49,7 +49,7 @@
 “……”  
 “怎么了？”  
 “我……不能不去。”  
-篝甩开了【教授】的手，冲到机动车道上，在雨中跑了起来。这时，前方一辆卡车，一边碾过积水，一边冲了过来。  
+篝甩开了『教授』的手，冲到机动车道上，在雨中跑了起来。这时，前方一辆卡车，一边碾过积水，一边冲了过来。  
 
 ![](../static/image/0119-2.png)
 
