--- a/article/sg0/doc/0122.md
+++ b/article/sg0/doc/0122.md
@@ -26,7 +26,7 @@
   - 在显像管工坊打工（记忆发生问题后暂缓）
   - 脑中被移植了红莉栖的记忆
   - 在红莉栖的意志下，用自身的记忆备份覆盖掉红莉栖记忆
-  - 幼时被【教授】囚禁
+  - 幼时被『教授』囚禁
   - 脑内能够听到“声音”
   - 觉醒了儿时在未来的记忆
   - 代替真由理回到了过去
@@ -38,7 +38,7 @@
 
 ### 敌对
 - 【美】STRATFO
-  - 【教授】在篝失踪的期间控制着篝
+  - 『教授』在篝失踪的期间控制着篝
   - 保存着篝的记忆
   - 派出武装势力想要夺回篝
 - 未知武装势力
