--- a/article/sg0/doc/0027.md
+++ b/article/sg0/doc/0027.md
@@ -68,7 +68,7 @@
 这次是枫。  
 “唔诶诶\~？”  
 “你们难道就只有这样的想法吗……”  
-“真，真由喜的话，已经拿到了冈伦的礼物了，所以不用了！”  
+“真、真由喜的话，已经拿到了冈伦的礼物了，所以不用了！”  
 或许是因为青梅竹马的缘分，抽到我的礼物的是真由理。顺带一提，我准备的是，金块形状的巨大的巧克力。就是在堂吉诃德的聚会商品专柜卖的那种。但是貌似吹雪和枫正一脸鄙视地看着我的礼物和我本人。  
 “冈伦先生啊……你就没有，什么其他的选择么？”  
 “真烦啊！聚会上这种东西会受欢迎——这是杂志上写的。”  
@@ -110,7 +110,7 @@
 “啊……？”  
 忽然，由季一副不可思议的表情看着礼物盒底，然后开始坐立不安起来。  
 “那个，不好意思，我，稍微离开下……”  
-由季从座位上站起来，抱着礼物盒慌慌张张地进了洗手间。看来是发现了暗藏其中的“特殊设计”了吧。根据之前真由理的情报，那里贴有桶子亲笔写的——真由理伪造的——信，内容是电影约会的邀请，也就是所谓的情书一样的东西。不知道现在的由季究竟是什么样的反应呢？再看另一位当事人桶子，打开了自己收到的礼物查看了内容，也露出了困惑的表情。他抽到的礼物是菲莉丝的，这让他打开之前一直处于兴奋不已的状态，不过现在已经完全静止了。同样根据真由理的情报，应该是两张电影票。“用于和由季约会”，貌似这样的指令书也一同放在了里面。感受到桶子疑问的视线，菲莉丝回了一个单眨眼，似乎是在说“加油喵”……  
+由季从座位上站起来，抱着礼物盒慌慌张张地进了洗手间。看来是发现了暗藏其中的“特殊设计”了吧。根据之前真由理的情报，那里贴有桶子亲笔写的——真由理伪造的——信，内容是电影约会的邀请，也就是所谓的情书一样的东西。不知道现在的由季究竟是什么样的反应呢？再看另一位当事人桶子，打开了自己收到的礼物查看了内容，也露出了困惑的表情。他抽到的礼物是菲莉丝的，这让他打开之前一直处于兴奋不已的状态，不过现在已经完全静止了。同样根据真由理的情报，应该是两张电影票。“用于和由季约会”，貌似这样的指令书也一同放在了里面。感受到桶子疑问的视线，菲莉丝回了一个 wink，似乎是在说“加油喵”……  
 菲莉丝抽到了比屋定今天在堂吉诃德买的古怪的玩偶；琉华子抽到了雷斯吉宁教授也是从堂吉诃德买的小型遥控直升机；教授则收到了綯准备的可爱的 12 色蜡笔套装；然后铃羽得到了似乎是由季亲手织的手套，还特地戴上给我们看，并露出了开心——却含着一些寂寞——的微笑。  
 “铃羽，真好呢。”  
 “嗯……话说，哥哥你抽中了什么？”  
@@ -151,20 +151,14 @@
 铃羽眯起眼睛，像是在怀念着什么。  
 “呐，真由姐，这首曲子，叫什么名字？”  
 “那个呢，这首曲子叫——”  
-真由理正要说出口，就在这个时候——
+真由理正要说出口，就在这个时候——  
 
-突然之间，世界扭曲了。
+突然之间，世界扭曲了。  
 “唔呃……！？”  
-我因为那仿佛贯穿身体的强烈“违和感”，忍不住发出痛苦的呻吟。  
-周围的事物摇摆不定——眼前幸福聚会的风景，宛如海市蜃楼一样摇曳起来。  
-这，这是！？难道……怎么会？！  
-好像远处，一声巨大的响声响起。无法聚焦的眼睛勉强地转向那个方向，看见吹雪撞翻了桌子倒在地上。枫和菲莉丝惊慌地叫着吹雪的名字，迅速跑了过去。  
-然而，这画面宛如看着水中的场景，摇摇晃晃模糊不清，而且影像也逐渐变得慢镜头一般。声音也渐渐离我远去。不管怎么伸手也碰不到任何人，任何东西。时间和空间变得支离破碎，连一切物质的“自我”主体性都渐渐崩坏。就是这种令人不快的感觉。  
-这——这个感觉是——！  
-我知道的，也一直不愿记起的，已经体验到厌烦的可怕现象。  
-
-这个感觉是——  
-*Reading……Steiner……*！？  
+我因为那仿佛贯穿身体的强烈“违和感”，忍不住发出痛苦的呻吟。周围的事物摇摆不定——眼前幸福聚会的风景，宛如海市蜃楼一样摇曳起来。  
+“这、这是！？难道……怎么会？！”  
+远处好像传来一声巨大的响声。我无法聚焦的眼睛勉强转向那个方向，看见吹雪撞翻了桌子倒在地上，枫和菲莉丝惊慌地叫着吹雪的名字，迅速跑了过去。然而，这画面宛如看着水中的场景，摇摇晃晃模糊不清，而且影像也逐渐变得慢镜头一般，声音也渐渐离我远去。不管怎么伸手也碰不到任何人、任何东西。时间和空间变得支离破碎，连一切物质的“自我”主体性都渐渐崩坏。就是这种令人不快的感觉。这——这个感觉是——！我知道的，也一直不愿记起的，已经体验到厌烦的可怕现象。  
+这个感觉是——*Reading……Steiner……*！  
 
 
 <br/>
