--- a/article/sg0/doc/0028.md
+++ b/article/sg0/doc/0028.md
@@ -6,17 +6,14 @@
 
 ---
 
-时隔四月，再次品尝到这世界被扭曲的滋味。  
-是谁？到底是谁让世界线变动了？  
-我什么也没做。没有任何干涉世界的举动。  
-可为何世界还要再次戏弄我？  
+时隔四个月，我再次尝到这世界被扭曲的滋味。是谁？到底是谁让世界线变动了？我什么也没做，没有任何干涉世界的举动。可为何世界还要再次戏弄我？  
 
 ![](../static/image/0028-1.png)
 
-睁开眼，周遭的色彩渐渐复原。摇摇晃晃的整个世界，渐渐地再次回到了稳定的样子。眼前的光景，已不再是 LAB 里温馨派对的场景。我在室外，下着雨，很大的雨，打在脸上很痛。彻骨的寒冷，急速地夺去我全身的力气，让我清醒地感受到，这是寒冬之雨。视界不再扭曲，进入眼中 的是一群不认识的男人，坚实的后背对着我。复数穿着靴子踩在泥上的足音交织着雨声进入耳中。强烈的恶臭刺激着鼻腔。让人难以呼吸的下水道的臭气，交杂着像是橡胶和塑料燃烧的恶劣臭味。这里是哪？我现在在做什么？周围的变化实在太剧烈，我拼命想知道现在是什么状况，大脑的运转却跟不上。  
+睁开眼，周遭的色彩渐渐复原。摇摇晃晃的整个世界，渐渐回到了稳定的样子。眼前的光景，已不再是 LAB 里温馨派对的场景。我在室外，下着雨，很大的雨，打在脸上很痛。彻骨的寒冷，急速地夺去我全身的力气，让我清醒地感受到，这是寒冬之雨。视界不再扭曲，进入眼中 的是一群不认识的男人，坚实的后背对着我。复数穿着靴子踩在泥上的足音交织着雨声进入耳中。强烈的恶臭刺激着鼻腔。让人难以呼吸的下水道的臭气，交杂着像是橡胶和塑料燃烧的恶劣臭味。这里是哪？我现在在做什么？周围的变化实在太剧烈，我拼命想知道现在是什么状况，大脑的运转却跟不上。  
 “快到了，请再加把劲。”  
 我停下了脚步，一只粗壮的手鼓励地拍了拍我的肩膀。转头一看，是一位和我同龄的有着精悍脸庞的青年，应该是不认识的。青年穿着新闻里常见的自卫队迷彩服和装备，肩扛自动步枪，周围的七八个男人都是这个装束。他们围着我警戒着四周，无声地前进着。这些人是……自卫队员？这时我才注意到，自己也穿着同样的迷彩服。我竟然也是自卫队员？试着摸摸自己的上臂，完全没有肌肉，还是那么手无缚鸡之力。和周围男人不同，我身上也没有步枪之类的武器。那么这到底是怎么回事？这七八个身强力壮的自卫队员在护卫着我移动——怎么看都是如此。我何时成了这种 VIP？搞不清楚，但还是被自卫队员催着，拖着沉重的双脚前进。而且这条路是怎么搞的？全是黏黏的泥巴，周围散落着大量垃圾和瓦砾，要频繁地避开这些前进。左右可以看到高墙的轮廓，往耸立的两壁上方看去，下着大雨的夜空呈现异样的红色，还带着模糊的光亮。倒也因此，不用手电筒就能在这样的道路上前进。  
-嗯？有声音。这是……水声。寻声一看，侧边墙上开了个大洞，大量污水涌进。因此前方都出现了几条小河。原来如此，这里是水干掉的河底，左右的高墙是河的两岸。  
+嗯？有声音。这是……水声？寻声一看，侧边墙上开了个大洞，大量污水涌进。因此前方都出现了几条小河。原来如此，这里是水干掉的河底，左右的高墙是河的两岸。  
 “这里是哪一带？”  
 为了不被雨声掩盖，我几乎是用喊的回头询问刚才说过话的队员。  
 “嘘！请不要大声说话。”  
@@ -24,10 +21,8 @@
 “就快脱离市中心了。到练马驻屯地附近应该就能上车了，到那之前请步行——”  
 但他的话语戛然而止，全员突然被前所未有的紧张感所包围。一个队员抓住我的手腕，把我推到墙上，其他所有人也背靠着墙，屏住呼吸。远处传来直升机的声音，而且不止一台，逐渐靠近这里。我还没完全弄清情况，只是被这种紧张感所淹没，心跳得厉害。  
 “躲到那辆车的阴影里去。”  
-几米远的瓦砾之间，满是泥的汽车倒在那里。似乎是河干后从河岸掉下来的，车体严重变形，车顶已经全碎。俯身到散发恶臭的污泥中，我滑到车的阴影里。另一方面，自卫队员们小声着交换着指令，看来这样的事态也在预想之中。他们开始了行动，仅剩两名队员留在我身边，其余人向我们来的方向跑去，然后各自利用墙上的裂缝和凸起，蹬上河岸，消失在我们的视线中。然后马上传来了枪声。而且不是手枪打了一枪这类天真的东西——是战斗的声音。被枪声吸引，直升机的声音离我们而去。  
-怎么会这样……  
-在这条世界线上，日本发生了战争？  
-第三次世界大战——铃羽的话从脑海闪过。  
+几米远的瓦砾之间，倒着一辆满是泥的汽车。似乎是河干后从河岸掉下来的，车体严重变形，车顶已经全碎。俯身到散发恶臭的污泥中，我滑到车的阴影里。另一方面，自卫队员们小声着交换着指令，看来这样的事态也在预想之中。他们开始了行动，仅剩两名队员留在我身边，其余人向我们来的方向跑去，然后各自利用墙上的裂缝和凸起，蹬上河岸，消失在我们的视线中。然后马上传来了枪声。而且不是手枪打了一枪这类天真的东西——是战斗的声音。被枪声吸引，直升机的声音离我们而去。  
+怎么会这样……在这条世界线上，日本发生了战争？第三次世界大战——铃羽的话从脑海闪过。  
 我心不在焉地把视线扫向藏身的车的内部。一男一女和小孩，三个人的尸体被安全带固定着倒吊在那里，身上都是凝固为黑色的血，看起来简直就像鬼屋里粗制滥造的假人。然后我发现了，刚才一心行进时没有发现的，原来污泥里到处都沉着类似的假人。那些筋骨裸露在外的手脚扭曲地伸展着，仿佛在向苍天求救。  
 “唔……啊……”  
 我差点叫了出来，赶紧用手捂住。那些，并不是什么假人，而是……  
