--- a/article/sg0/doc/0046.md
+++ b/article/sg0/doc/0046.md
@@ -112,7 +112,7 @@
  我已经，不是以前的我了啊……”  
 真帆从天桥上眺望着车站前的人群，喃喃自语着。  
 
-突然，一个衣着特别显眼的人从桥下走了过来。如此炎热的天气，那个人却穿着黑色的骑手装，戴着全覆式头盔，显得与周围格格不入。她还以为是所谓的 cosplay ，但是周围的人不要说拍照了，反而都退避地让出道路。看体形的话，好像是名女性。以真帆来看，那也算得上是凹凸有致富有魅力的身材。  
+突然，一个衣着特别显眼的人从桥下走了过来。如此炎热的天气，那个人却穿着黑色的骑手装，戴着全覆式头盔，显得与周围格格不入。她还以为是所谓的 cosplay，但是周围的人不要说拍照了，反而都退避地让出道路。看体形的话，好像是名女性。以真帆来看，那也算得上是凹凸有致富有魅力的身材。  
 那个女人就那样穿过天桥下方，离开了真帆的视线范围。  
 ——就在以为她已经离开的时候，那个人却从天桥的楼梯走了上来，而且笔直地朝向真帆的方向。  
 真帆就像其他行人一样慌忙低下视线，想赶快离开这个地方。然而在真帆逃开之前，穿骑手装的女性就跑到了她的身边，一言不发地抓住了她的手臂。
@@ -132,7 +132,7 @@
 对方没有回答真帆的提问。她好像注意到了什么，抬头向天空望去。真帆也顺着她的目光抬头望天。一瞬，大楼的窗户上闪过了巨大的黑影，伴随着直升机的声音，而且相当近。  
 从什么时候出现的呢。  
 完全没有注意到。  
-那个时候，真帆也感觉到周围的气氛明显发生了变化。之前自顾自行走着的路人们都愣住了，表情有点畏怯地看着车站的方向，耳边不断传来“那是什么？”或者“电视剧摄影？”或是“ cosplay 的活动？”之类的议论。  
+那个时候，真帆也感觉到周围的气氛明显发生了变化。之前自顾自行走着的路人们都愣住了，表情有点畏怯地看着车站的方向，耳边不断传来“那是什么？”或者“电视剧摄影？”或是“ cosplay 活动？”之类的议论。  
 车站那边好像发生了什么事情。真帆也站了起来，从天桥上望向车站。  
 “那是……什么？”  
 真帆的口中无意识地道出和周围人同样的疑问。  
