--- a/article/sg0/doc/0072.md
+++ b/article/sg0/doc/0072.md
@@ -107,7 +107,7 @@
 天王寺没有回话，只是催促我坐到离绹远一些的椅子上。他没有像平时那样大声喊叫，只是冷静和透彻的模样。面对这种态度，明明是在冬天我的身子却一直冒汗。但是，话已经说出口，已经没有办法回头了。我按照他指示地坐在了一把小椅子上，为了随时能动起来而保持双腿用力的状态。  
 “你这家伙……在说些什么？”  
 “……想要糊弄过去也是没用的。”  
-“糊弄什么，我完全不懂你说的话啊。那个叫 FB 的是什么东西，新的<abbr title="社交网络服务，Social Networking Service 的简称。交流型网站有各种各样的形式，如邀请制、注册登录制等。cosplay 。">SNS</abbr>吗？”  
+“糊弄什么，我完全不懂你说的话啊。那个叫 FB 的是什么东西，新的<abbr title="社交网络服务，Social Networking Service 的简称。交流型网站有各种各样的形式，如邀请制、注册登录制等。SNS 的设立旨在让人更容易与他人在网上进行交流。">SNS</abbr>吗？”  
 “我知道的，你是 SERN 的 Rounder 这件事。”  
 
 ![](../static/image/0072-3.png)
@@ -206,7 +206,7 @@ SERN 把成为了 Rounder 的人当成了一次性用品。然后用这样的爪
 K6205……是什么的暗号吧？  
 “而且把‘five’发音成‘fife’。”  
 “是哪里的口音吗？”  
-“不。这是<abbr title="为了在无线电通话中清楚辨别内容防止误听而设计的发音规则，如 cosplay  A，cosplay  B。">北约音标字母</abbr>，是军队用语。”  
+“不。这是<abbr title="为了在无线电通话中清楚辨别内容防止误听而设计的发音规则，如 Alpha 代表A，Bravo 代表B。">北约音标字母</abbr>，是军队用语。”  
 “军队……”  
 “而且，是西方的。”  
 
