--- a/article/sg0/doc/0099.md
+++ b/article/sg0/doc/0099.md
@@ -103,7 +103,7 @@ My Spoon——这个奇怪的关键词，以前也有听到过。一般来说，
  在大学称呼比屋定为‘前辈’的人，只有红莉栖；  
  ‘栗悟饭和龟派气功波’，是红莉栖在 @ch 上使用的网名，这件事除了她本人，就只有我知道了；  
  红莉栖她，知道关于维克多·孔多利亚大学的事情，也知道小白鼠实验的事情；  
- 更知道制作时间机器的 11 个理论……”  
+ 更知道制作时间机器的 11 种理论……”  
 “冈伦……先生？这是怎么回事？”  
 “你想说什么？”  
 “……我想到的假说——”  
