--- a/article/sg0/doc/0001.md
+++ b/article/sg0/doc/0001.md
@@ -6,9 +6,9 @@
 
 ---
 
-车站前耸立着的秋叶原新地标之一，UPX，4 楼的大厅里，从早晨开始就为 ATF ——秋叶原科技论坛——的演讲做着准备。同国内外数所大学和研究设施合作，这里不定期的开展着研讨会和座谈会。我所在的东京电机大学也作为产学合作机能的一环参与其中，相关研究会的学生也必须参加这些研讨会，并向导师上交报告。不这样做的话，就拿不到学分。我作为演讲者之一的井崎准教授的助手参与这次演讲，现在正在公共大厅里的前台呆着，拿着名单记录参加研讨会的学生的出勤情况。离研讨会开始还有一段时间，大厅里的人也是零零散散，名单上的学生还一个都没有来。真是闲啊，只能在这里等着。  
+车站前耸立着的秋叶原新地标之一，UPX 大楼，4 楼的大厅里，从早晨开始就为 ATF ——秋叶原科技论坛——的演讲做着准备。同国内外数所大学和研究设施合作，这里不定期的开展着研讨会和座谈会。我所在的东京电机大学也作为产学合作机能的一环参与其中，相关研究会的学生也必须参加这些研讨会，并向导师上交报告。不这样做的话，就拿不到学分。我作为演讲者之一的井崎准教授的助手参与这次演讲，现在正在公共大厅里的前台呆着，拿着名单记录参加研讨会的学生的出勤情况。离研讨会开始还有一段时间，大厅里的人也是零零散散，名单上的学生还一个都没有来。真是闲啊，只能在这里等着。  
 对于以前的我来说，这么勤奋是无法想象的。我之所以这样向井崎教授展示自己，是因为我有了新的人生目标——维克多·孔多利亚大学。井崎教授正在和这所大学进行共同研究，人脉也很广。如果能成为他的助手的话，应该会是我靠近自己目标的第一步吧。我用自己不够用的脑细胞这样想道。而且，在这次的演讲中，后面还会有维克多·孔多利亚大学的研讨会。对于此事，我当然也很关注。  
-夏天吗……  
+夏天啊……  
 “呜……”  
 我发出了一阵痛苦的呻吟。当初的红发天才少女的身姿再一次在脑海中一闪而过。我之所以把维克多·孔多利亚大学作为我的目标，是因为想学习牧濑红莉栖要做的东西，并且自己把它继续进行下去。当然，我不是红莉栖那样的天才。所以，我也不会说出“想要继承她的全部研究”之类没有自知之明的话来。但是，对我来说，至少一成的话，如果能够做到的话……真亏我能够这样子振作起来。  
 我这样想着而发出一阵苦笑，这时大厅里响起一个声音。  
@@ -26,14 +26,20 @@
  啊不，我还是第一次跟你说这个啊……但对我来说，你已经是第四个了。  
  真是的，到了这地方后就一直……”  
 盛气凌人的少女从怀中掏出了一张卡片。那是给这次演讲的参加者配发的来宾卡，在正面用日语和英语印有姓名和所属机构。  
+
+![](../static/image/0001-2.png)
+
 “诶……？来宾……维克多·孔多利亚大学，脑科学研究所，比屋定真帆？”  
 我比较着眼前的少女和卡片，总算想到了。  
 “啊啊！是这么回事啊！你这张卡，是在哪里捡到——”  
 “这种话我也是第四次听了！”  
 她一副烦透了的样子，举起了另一张卡片给我看。  
-这是带有照片的卡片，来自维克多·孔多利亚大学的脑科学研究所。  
+
+![](../static/image/0001-3.png)
+
+这是带有照片的 ID 卡，来自维克多·孔多利亚大学的脑科学研究所。  
 “诶？诶？！”  
-我在另外的世界线上曾经见过红莉栖拿的卡片，和这张是同样的设计。ID 卡上印着的照片，毫无疑问是眼前的女孩。  
+我在另外的世界线上曾经见过红莉栖的 ID 卡，和这张是同样的设计。卡上印着的照片，毫无疑问正是眼前的女孩。  
 “读作 *Hiyajo Maho* 哦，我的名字，比屋定真帆。  
  因为不论是汉字还是罗马音都没人能好好读出来，所以就先跟你说明咯。”  
 “嗯……那个……维克多·孔多利亚大学的……中学生？”  
@@ -76,13 +82,13 @@
 正好电梯门打开，从里面走出一位女性。  
 认出这位女性的脸的瞬间，我全身的汗毛都立了起来。
 
-![](../static/image/0001-2.png)
+![](../static/image/0001-4.png)
 
 “……！！！”  
 桐生……萌郁！  
 我拼命控制住马上就要喊叫出来的冲动。  
 冷静下来！  
-这里是β世界线！  
+这里是 β 世界线！  
 **真由理还活着！**  
 **萌郁不会杀真由理！**  
 我们四目相对。眼镜后的那双瞳孔依旧是没有生气，看不懂在想些什么。  
@@ -106,7 +112,7 @@
 就像被阴云一般的不祥的预感笼罩着的那个时候一样。  
 “你又要在这里……”  
 还是说，这只是我想太多了吗？  
-现在的萌郁不是什么**SERN**的**Rounder**，只是一名杂志记者吗？  
+现在的萌郁不是什么 **SERN** 的 **Rounder**，只是一名杂志记者吗？  
 不，就算桐生萌郁是 Rounder，我们也和 SERN 没有关系了，SERN 不可能再盯上我们。  
 
 “呼……”  
