--- a/article/sg0/doc/0004.md
+++ b/article/sg0/doc/0004.md
@@ -17,6 +17,8 @@
 『冈伦……加油』  
 「你太容易懂了吧。」  
 
+![](../static/image/0004-1.png)
+
 我来这里的目的是为了接近雷斯吉宁教授，但是现在他正被许多有名的研究者包围，实在不是我一介学生能靠近的氛围。所以我只是站在墙边，一直在把料理往嘴里塞。说实话，味道什么的我一点也没尝出来。面带微笑的补充食品的服务生很快地把空瓶子拿走，我没办法只好一直喝着新的饮料。胃已经涨起来了，不太好受。这简直像是在另外的世界发生的事情。  
 “果然，很不适应这种地方啊……”（×2）  
 我在自言自语的同时，听到附近的一位女性说出了完全相同的话。我吃惊的看向发出声音的人，对上了视线。  
@@ -101,19 +103,18 @@
 “真像那孩子呢。绝对不服输的性格对吧？”  
 “啊啊，老是说一些歪门邪道。”  
 “噗噗…”  
-“ ‘做个前脑叶白质切除手术把你前脑叶给搞出来怎么样’什么的，经常会这么说。”  
+“‘做个前脑叶白质切除手术把你前脑叶给搞出来怎么样’什么的，经常会这么说。”  
 “诶诶？居然连这种事都……红莉栖的话，确实会呢。”  
 “是吧？真希望你能好好的教育教育学妹啊。”  
-“对于这一点我很认同，向你道歉。  
- ……噗……  
- ……呜呜……”  
+“对于这一点我很认同，向你道歉。噗……  
+ 呜呜……”  
 她笑了……我本来这样想着，可是比屋定真帆却突然掉下了眼泪。  
-“怎，怎么了？”  
+“怎、怎么了？”  
 我慌忙递出手绢。  
 “诶…诶？”  
 对于自己在哭这件事，她好像也很疑惑的样子。  
 我很是不解，刚才的对话中，有什么踩到她的地雷了吗？  
-“不，不要紧吧？”  
+“不、不要紧吧？”  
 “没事啦，抱歉抱歉。”  
 她没有收下我的手绢，而是从白大褂里取出了纸巾擦了擦眼角。  
 
