--- a/article/sg0/doc/0093.md
+++ b/article/sg0/doc/0093.md
@@ -55,7 +55,7 @@
   - 已被删除
 
 ## 情报整理 | 重要事件
-- 未知原因条约世界线
+- 未知原因跳跃世界线
   - 发生时机：『Amadeus』疑似被劫持时接到“红莉栖”的联络，接听后
   - 此事件变成未发生
   - 新年派对袭击事件变为未发生
@@ -71,7 +71,7 @@
   - ■■■■■■■■■■
   - ■■ 红莉栖的笔记本电脑和移动硬盘
 - ■■■■■■■■■■■■■
-  - 删除『Amadeus』与记忆资料
+  - 删除『Amadeus』■■■■■
   - ■■■■■■■■■■
 - ■■■■■■■■■■■■■
   - ■■■■■■■■■■
