--- a/article/sg0/doc/0124.md
+++ b/article/sg0/doc/0124.md
@@ -1,6 +1,6 @@
 # 盟誓的文艺复兴 - 02
 > 1.055821  
-> [ ????/??/?? ]  冈伦在陌生的地方苏醒，来到了好像是一片废墟的地方。  
+> [ ????/??/?? ]  冈伦在陌生的地方苏醒，来到了好像是一片废墟的地方，环境十分惨烈。后来发现自己所在的地方是变成废墟的秋叶原，到处都是废墟与尸体。路遇武装士兵，就在要被袭击时铃羽出现射杀了对方。但她好像不认识冈伦，听到冈伦的名字非常惊讶。    
 
 | [←prev](./0123) | [menu](../) | [next→](./0125) |
 
