--- a/article/sg0/doc/0125.md
+++ b/article/sg0/doc/0125.md
@@ -132,7 +132,7 @@
 “爸爸也是的，像这样欺骗了整个世界什么的。”  
 “所以说，那是没办法的事情啊。”  
 欺骗……吗？说到被欺骗，我也是一样吧。我被告知会在 2025 年死亡的命运，被告知这是在 β 世界线里无法改变的事实，但是不管形式如何，我现在还是像这样活着。就连跨越了时间的过去的我，也被未来欺骗了。不止我一个人，铃羽和其他人也是，整个世界都被欺骗了。  
-“哎……？世界……被欺骗了……？”  
+“哎……？**世界……被欺骗了**……？”  
 
 
 <br/>
