--- a/article/sg0/doc/0127.md
+++ b/article/sg0/doc/0127.md
@@ -1,126 +1,108 @@
 # 盟誓的文艺复兴 - 05
 > 1.055821  
-> [ 2036/03/07 ] 桶子为冈伦讲述了这 25 年的经历，与冈伦为何会在 2036 年醒来。冈伦隐约意识到，世界被欺骗了。  
+> [ 2036/03/07 ]冈伦终于亲身体验到了自以为知道却始终没有正视的 β 世界线未来战争的地狱，意识到了自己的一直以来的自以为是与自我欺骗，实际上谁都没能拯救，只有自己得救。冈伦收到了 2025 年的自己的口信，要将“红莉栖”从『Amadeus』的诅咒中解放出来。他终于下定决心，通过桶子和真帆一直精心维持的时间跳跃环境，进行近 3000 次的时间跳跃回到过去。这部分，游戏的处理是直接一个转场带过，不如动画处理得燃。跳跃回过去的方案是桶子提出的，和真帆共同维护的；动画处理为冈伦自己意识到时间跳跃机的存在，是因为衔接的是前文时间跳跃的剧情。游戏里真帆主动提出自己改良了时间跳跃的长度，要冈伦以后替她向红莉栖炫耀。并且游戏中当前世界线应该没有『Amadeus』的“红莉栖”。  
 
 | [←prev](./0126) | [menu](../) | [next→](./0128) |
 
 ---
 
-“冈伦只有到 2011 年一月半的记忆对吧？”  
-“啊啊。2011 年的 1 月世界线变动了。在那之后的事情我就不记得了……”  
-“连自己都没有觉察到，就老了 25 岁。”  
-“这事实伴随着不安，一直在我的内心里骚动。”  
-“果然在身体方面还是有点问题吗，还是在混乱中呢……”  
-“话说现在的冈伦的脑内，本来是不能没有 2011 年 1 月末的记忆的……”  
-“月末？为什么是月末？”  
-“因为真帆碳把冈伦的记忆数据化保存的时候是 2011 年 1 月末的事情。”  
-“比屋定把我的记忆…….？”  
-“因为你说想助『Amadeus』的研究一臂之力，所以就拜托了真帆碳把你的记忆样本取出来不是嘛。”  
-“我要帮，『Amadeus』的……”  
-“我突然意识到了一个非常严重的问题。”  
-“这样说来，难道现在我脑内的是……”  
-“对，就和你想的一样，现在的冈伦脑内的记忆，就是那时的——2011 年数据化的记忆……”  
-“数据化的——记忆。”  
-“我的脑内是……”  
-“等下爸爸，我完全不懂你在说什么。  
- 差不多该说明一下为什么冈部叔叔还活着吧？  
- 你说过叔叔在 2025 年已经死了吧？”  
-“死掉了哦，在事实上是这样……”  
-“事实上？”  
-“时间机器开发竞争，在那个时候最为激烈。”  
-“各国各种机关，都想要牧濑红莉栖生前留下的论文和记忆。”  
-“但是在那个时候，牧濑红莉栖的遗产全部都被交给了 STRATFO。”  
-“STRATFO……”  
-“但是他们虽然有这些东西，但还是无法确认论文的内容。因为无法解锁呐。”  
-“顺便那个开发那个锁的，正是 2010 年的我。”  
-“然后 STRATFO 就把牧濑红莉栖认识的人全部抓住，准备问出信息……”  
-“然后，我就……”  
-“他们为了从冈伦的记忆里取出关于牧濑红莉栖的信息，运用了各种各样的手段。”  
-“我们救到你的时候，冈伦的精神已经崩溃了……就连生存的能力也失去了。”  
-“恢复精神大概是不可能的，和已经死掉差不多是同样的状态。”  
-“那就是……肉体还存在的意思吗？”  
-“就是那样。”  
-“这里也有来自冈伦自己的指点。是因为冈伦感受到了自己会被盯上的危机感哦。”  
-“但是，至少向我说明一下也可以的啊。”  
-“俗话说，想要欺骗别人，首先要欺骗同伴吧？”  
-“怎么这样……”  
-“铃羽有一点无精打采。”  
-“因为没有取得父亲的信赖所以受打击了吧。”  
-“别摆出那样的表情啦铃羽。知道这件事的，即便在瓦尔基里里面只有很少的一部分人啦。”  
-“我好像听过『瓦尔基里』这个名字。”  
-“铃羽在 2010 年也经常说。”  
-“是桶子和铃羽所属的抵抗组织的名称。”  
-“继续说吧。”  
-“冈伦由于精神被破坏，丧失了生存能力。如果就这样不管的话，就连肉体都会死去的。”  
-“然后，知道事实的一部分人，在别的设施一直在照顾你。”  
-“从 2025 年，到 2036 年。”  
-“对所有人保密着，在这 11 年间，一直……吗。”  
-“就算只让肉体活着，营养也是必要的。”  
-“而且如果一直躺着，关节会僵化，皮肤也会裂开。”  
-“为了防止这些，有人在一直关照我……”  
-“难道是，真由理吗？”  
-“不止真由氏。还有菲莉丝碳和琉华氏，还有真帆碳也一直在照顾你。”  
-“活着。”  
-“真由理，菲莉丝，和琉华子——”  
-“在这么恐怖的世界，他们也活着，看护着变成了这样的我。”  
-“一直。”  
-“呐，桶子……”  
-“为什么我现在会醒过来？”  
-“我的记忆在 2011 年的时候被数据化了。”  
-“如果知道有备份存在的话，应该能更早些像这样把脑内的记忆覆盖才对啊。”  
-“这就是很简单的问题了。因为冈伦的记忆直到不久之前都不知道在哪里。”  
-“因为冈伦和牧濑红莉栖的记忆数据，被 STRATFO 一直保管着。”  
-“一直都不知道保管场所。”  
-“发现的时候是在半个月之前。你猜在哪里？肯定会大吃一惊哦。”  
-“在哪里？”  
-“就在咱们眼皮底下。大学哦，咱们的。”  
-“难道是……东京电机大学吗！？”  
-“在那个地下，有着那些家伙的支部。话说，现在也差不多变成废墟了呐。”  
-“东京电机大学的地下有着 STRATFO 的支部……”  
-“于是半月前才找到冈伦的记忆的我们，马上就向脑内覆盖了……”  
-“但是，在那之后过了 10 天，我也没有苏醒过来。”  
-“在觉得果然不成，正打算放弃的时候——我就这样苏醒了。”  
-“相隔 25 年。”  
-“25 年——”  
-“…………”  
+“真由喜怎么样了？”  
+“哭累了正在睡着呢。”  
+“没办法啊，真由喜和琉华氏一直都是很好的朋友……”  
+“唔……琉华哥！”  
+琉华子……死了。为了保护真由理和菲莉丝而牺牲了。  
+“唔……!”  
+他的死亡，与我脑海中不断重复的真由理的死亡重叠在了一起。在我怀中逐渐冰冷下来的真由理，然后是琉华子。无论到哪里都是这样，真由理也是，琉华子也是，然后红莉栖也是。大家都死了，死了！  
+“因为这场战争，非常多的人死去了。  
+ 小学的朋友、初高中的朋友、还有大学的朋友……  
+ 亲戚、老师、认识的人、大人和小孩们，还有……重要的人……  
+ 非常多……真的是非常多的人死去了……”  
 
-“一直看着自己的手。”  
-“痩得不成样子的手上有着无数血管浮起。”  
-“映在镜子上的脸交错着皱纹的不健康的脸。”  
-“头发也有了一半白发。”  
-“没想到一睁眼就过了 25 年……这是什么浦岛太郎故事啊。”  
-“平复不了心情也是没办法的。”  
-“当然很受打击。”  
-“但是对于我而言最有冲击性的是——”  
-“这记忆是曾经被数据化过的吧……”  
-“孩子时候开始的记忆。”  
-“那个夏天的记忆。”  
-“和红莉栖的记忆。”  
-“这些全部都是曾经变成过 0 和 1 的东西。”  
-“这，可以称之为人类吗？”  
-“我还算是人类吗？”  
-“但是如果这么说的话，牧濑氏的时间跳跃机技术不也一样吗。”  
-“冈伦应该经历了很多次了吧。”  
-“……的确是那样。”  
-“但是，就算头脑明白这道理，却还是没有办法整理自己的心情。”  
-“被隔断了的 25 年的时间。”  
-“就像把这时间都忘却在了数字的世界当中一样。”  
-“甚至有种这段时间是被夺去了一样的感觉。”  
+我知道的。不——我一直都**以为**自己是知道的。不到达命运石之门的话，留在 β 世界线的话，全世界迟早会被战火所笼罩。这是听说过无数次的事了。那会是一个怎样的未来，**我一直以为自己知道**。但那只不过是，遥远的未来罢了，没有半点现实感，有的，只是想象罢了。我曾经经历过数百次、数千次的噩梦，原以为没有比那再糟糕的地狱了。但是像这样，亲眼看到、亲耳听到、亲身体会的现在，让我知道了那些都并非只是想象。堆积如山的死尸；成群的饥不择食的野狗；倒下的士兵；炙烤过的肉味；腐烂的内脏味；现在仍然残留在手上的，琉华子的血的温度；真由理的血的温度；红莉栖的血的温度……我想着只要拯救了真由理就行了，对红莉栖见死不救，逃避现实，即使如此，我还以为至少拯救了真由理他们。但是，**到最后我谁也没能拯救，获得拯救的，只有我自己罢了**。自己，只有我自己得救了，其他人谁都没能拯救。红莉栖也是，真由理也是，篝也是，琉华子也是。我谁都没能拯救。  
 
-“我果然还是无法接受……”  
-“不要这么说嘛，铃羽。”  
-“爸爸也够了。像这样欺骗整个世界什么的。”  
-“所以说，那是没办法的事情啊。”  
-“……欺骗了，吗。”  
-“说到被欺骗，我也是一样吧。”  
-“我被告知会在 2025 年死亡的命运。”  
-“被告知这是在β世界线里无法改变的事实。”  
-“但是不管以怎样的形式，我还是这样活着。”  
-“就连跨越了时间的过去的我，也被未来欺骗了。”  
-“不止我一个人。”  
-“铃羽和其他的家伙，整个世界都被欺骗了。”  
-“…………”  
-“世界……被欺骗了……？”  
+“把‘红莉栖’从『Amadeus』的诅咒中解放出来吧。”  
+“诶？”  
+“这是 2025 年的冈伦，留下的口信……”  
+“我留下的……口信……？”  
+“寻找 *STEINS;GATE* 这条世界线的道路是凶险的。  
+ 只是重复一次两次，是不可能找到方法的吧。  
+ 但是，  
+ **从那时开始，我们做的所有事情，不也会成为通往命运石之门的道路吗——**  
+ **无数的未来，不是都会与过去连接在一起吗——**  
+ 11 年前的冈伦是这样说的。”  
+“把‘红莉栖’解放出来……”  
+“所以说，**我们现在所处的世界，并不是无用的，一定也是必要的。**  
+ 至少现在的我是这么认为的。”  
+ 当然，我也不是说这个世界继续这样下去就好。”  
+“桶子……”  
+“所以说啊，冈伦，再回去重新思考一次吧？回到你记忆中断的那段时间里……”  
+“回到 2011 年……吗？但是，那种事……”  
+镜子里，映照着多了几分沧桑的我。  
+“再说，以这样的姿态回去，我能做什么……？”  
+“做得到哦。”  
+无线电里又传来了有些熟悉的声音。  
+“好久不见呐，冈部先生，有 11 年了吧。”  
+“比屋定吗……？”  
+“往房间里面看。”  
+像是为了配合这句话，桶子不知何时站到了房间深处，一个光线昏暗的角落。突然的亮光照明了镇座在那个角落的物体——  
+
+![](../static/image/0127-1.png)
+
+“电话微波炉（暂定）……”  
+“是我根据你和桥田先生的描述制作出来的哟。看，也配上了 VR 耳机哦。”  
+“因为想着可能会有这种事，飘升机也准备好了。”  
+“……”  
+桶子和我进一步说明了，在我失去意识的这 11 年里，他们一直维持着让我可以“接收”时间跳跃的环境。原来如此啊……就算我没有意识，只要预先在我太阳穴附近设置好自动受信装置，这样就可以了。2025 年我倒下后，这具身体，一直都是真由理他们照顾的。桶子和真帆，在 11 年前就预想到了这件事吗？或者说，这也是 2025 年的我留下的后手吗？  
+“不断改良后的结果，可以跳跃的时间延长到了 336 小时。”  
+“336 个小时……两周吗。”  
+“可是，只能这样跳跃到中途。  
+ 因为是 10 年前改良的时间跳跃机，所以再往前还是只能跳跃 48 小时。”  
+也就是说，想要回到 2011 年 1 月末，简单计算下——怎么说也要近 3000 次的时间跳跃……  
+“这将会是前所未有的艰辛旅程。就算这样你还要回去吗……”  
+“……”  
+近 3000 次的时间跳跃——究竟现在的我能够做到吗？  
+“累了的话，在途中休息一下就好。”  
+“桶子……”  
+“没问题的。不管到了什么时间，我们都一定会在的。”  
+“比屋定……”  
+“我呐……感到后悔……  
+ 因为『Amadeus』，那孩子死后还被这么多怀有邪念的人所利用……  
+ 几年……几十年……  
+ 所以我也拜托你……把那孩子……把‘红莉栖’从丑恶的欲望漩涡中解放出来……  
+ 拯救红莉栖……能做到这件事的，冈部先生……只有你了……”  
+“……”  
+我不知道，现在的我能不能做到；也不能保证，接下来的道路一定会通往命运石之门。尽管这样——  
+“再重新……思考一次吧……”  
+我能做到什么？我应该做什么？  
+
+“二位……拜托了！”  
+“*Okey-dokey!*”  
+听到我的回答，桶子迅速地开始准备。  
+“冈部先生。”  
+“嗯……？”  
+“如果可以的话，下次见到红莉栖时帮我带句话：  
+ ‘未来的我，做出的时间跳跃机，可以跳跃的时间是你的 7 倍哟！’”  
+“……我知道了。”  
+见到红莉栖的话——  
+“冈伦，这边的准备已经 OK 了！”  
+“真快呐。”  
+“毕竟我一直都在维护呐。”  
+“真不愧是你啊。”  
+“还好啦。”  
+电话微波炉（暂定）和 VR 耳机，和我在 LAB 里见到的多少有点不同，但毫无疑问，是我们的未来机械……  
+“啊但是，不和真由姐她们说一声没关系吗？”  
+“……现在不进行跳跃的话，决心就要减弱了。  
+ 而且，就算现在不见，总还会见到的，在过去的世界里……”  
+“说的也是。”  
+我从咧嘴笑着的桶子手里接过 VR 耳机，戴在了头上。  
+“那么，就这样。两周前再见吧。”  
+“啊啊，两周前再见。”  
+“保重啊。”  
+
+然后——  
+我再一次地跳跃到过去——  
+那是，非常非常漫长的——  
+漫长到难以想象的旅途。  
 
 
 <br/>
