--- a/article/sg0/doc/0093.md
+++ b/article/sg0/doc/0093.md
@@ -82,7 +82,7 @@
 ---
 
 “不知道什么时候能见到那位凤凰院凶真先生呢？”  
-<p align="right">No.009 KURISU</p>  
+<p align="right">LABMem No.009『KURISU』</p>  
 
 ![](../static/image/0093-1.png)
 
