--- a/article/sg0/doc/0122.md
+++ b/article/sg0/doc/0122.md
@@ -89,7 +89,7 @@
 ---
 
 “不论分开多远，这首歌都一定会将篝和妈妈再次相连。”  
-<p align="right">No.010 椎名篝</p>  
+<p align="right">LABMem No.010『椎名篝』</p>  
 
 ![](../static/image/0122-1.png)
 
