--- a/article/sg0/doc/0049.md
+++ b/article/sg0/doc/0049.md
@@ -78,7 +78,7 @@
 ---
 
 “我相信，凤凰院凶真迟早有一天一定会和我们一起……不，不对，是站在我们的前阵，指引我们。”  
-<p align="right">No.002 巴莱尔·提托</p>  
+<p align="right">LABMem No.003『巴莱尔·提托』</p>  
 
 ![](../static/image/0049-1.png)
 
