修正 时间跳跃装置

--- a/article/sg0/doc/0002.md
+++ b/article/sg0/doc/0002.md
@@ -69,8 +69,8 @@
 ……！  
 对我来说，这标题再熟悉不过了。就是想忘也忘不掉。  
 这是由一位 17 岁天才少女写成，发表在《*Science*》杂志且广受好评的论文的标题。  
-解析了全部掌管着人类记忆的神经脉冲模式的她，应用这些知识，成功的将记忆转化成了数字信号。并且，就在我面前，完成了**时间跳跃机**这一划时代的发明。  
-虽然已经不存在了。不论是时间跳跃机还是发明者本人，在这条世界线上都不存在了。  
+解析了全部掌管着人类记忆的神经脉冲模式的她，应用这些知识，成功的将记忆转化成了数字信号。并且，就在我面前，完成了**时间跳跃装置**这一划时代的发明。  
+虽然已经不存在了。不论是时间跳跃装置还是发明者本人，在这条世界线上都不存在了。  
 比屋定真帆（同传）：“因为曾在《*Science*》杂志发表过，所以在座各位中也有人了解的吧。  
  这是我们小组中一位天才般的日本研究者提出并完成的。”  
 说到这，比屋定真帆好像发出了一声连自己都没察觉到的叹息。然后继续同传的工作。  
@@ -100,7 +100,7 @@
 剧场内的骚动更大了。  
 是吗……红莉栖的研究，在她死后还被好好的继承下来了啊。  
 这应该也是理所当然的事情吧。  
-在 α 世界线上我亲身证实过的，时间跳跃机的基础理论。  
+在 α 世界线上我亲身证实过的，时间跳跃装置的基础理论。  
 那时候，毫无疑问我的记忆是被数字化并储存在了电脑中。  
 眼前的雷斯吉宁教授所讲述的，正是这一实践的基础技术。  
 比屋定真帆（同传）：“现在，我们所进行的项目主要为两个方面，一是应用于医疗方面……”  
