--- a/article/sg0/doc/0004.md
+++ b/article/sg0/doc/0004.md
@@ -62,7 +62,7 @@
 “还没有解决掉的课题堆积如山啊。比刚才研讨会上说的还要多得多。  
  比方说，就算能把记忆数据输入到原本的大脑里，如果大脑不能利用起来就什么意义都没有。  
  虽然有那个记忆但是却处于想不起来的状态，也就是说会变成跟丧失记忆的大脑一样。”  
-听比屋定真帆这样说，我回想起了，红莉栖制作时间跳跃机时说过的种种“解释”和“推论”。  
+听比屋定真帆这样说，我回想起了，红莉栖制作时间跳跃装置时说过的种种“解释”和“推论”。  
 “那个好像是……人来在存取记忆的时候，会从前脑叶向侧额叶发送信号的吧？”  
 “嗯嗯， Top-Down 记忆检索信号。”  
 “那就是说——”  
