--- a/article/sg0/doc/0044.md
+++ b/article/sg0/doc/0044.md
@@ -117,7 +117,7 @@ App 升级结束后，『Amadeus』一直启动着。
 比屋定擦拭着眼泪，轻轻地点了点头。  
 我给她讲了——  
 我在 α 世界线经历的事、时间机器的事、*Reading·Steiner* 的事。  
-被我们称为时间跳跃的，只有记忆穿越到过去的事，以及红莉栖成功开发了时间跳跃机的事。  
+被我们称为时间跳跃的，只有记忆穿越到过去的事，以及红莉栖成功开发了时间跳跃装置的事。  
 还有自称约翰·提托的，来自 2036 年的时间旅行者阿万音铃羽的事。  
 最后就是铃羽说到的未来，会第三次世界大战的事。  
 我告诉她，那场战争的导火索，就是时间机器的开发竞争。  
@@ -151,7 +151,7 @@ App 升级结束后，『Amadeus』一直启动着。
 “你读过红莉栖写的关于时间机器的论文原稿吗？”  
 “没。”  
 比屋定一个接一个地向我抛出问题。不知为何，她给我的感觉，好像有些急躁。  
-“你知道红莉栖是如何完成时间跳跃机器的吗？”  
+“你知道红莉栖是如何完成时间跳跃装置的吗？”  
 “大致上吧。”  
 “能重现出来吗？”  
 “不好说。如果有桶子的帮助的话，或许……”  
