--- a/article/sg0/doc/0106.md
+++ b/article/sg0/doc/0106.md
@@ -1,6 +1,6 @@
 # 二律背反的双模 - 13
 > 1.053649  
-> [ 2011/01/06 ] 得知真相后，几人讨论了《中钵论文》，怀疑真正的战争起因是背后的红莉栖原版论文，而记忆移植的目的也是为了时间机器相关的情报。目前商讨的解决方案是，真帆决心制造出时间跳跃机，然后将篝的原本记忆重新覆盖回去。  
+> [ 2011/01/06 ] 得知真相后，几人讨论了《中钵论文》，怀疑真正的战争起因是背后的红莉栖原版论文，而记忆移植的目的也是为了时间机器相关的情报。目前商讨的解决方案是，真帆决心制造出时间跳跃装置，然后将篝的原本记忆重新覆盖回去。  
 
 | [←prev](./0105) | [menu](../) | [next→](./0107) |
 
